<resources>
    <string name="app_name">Dera</string>
    <string name="list_item">Select a Filter</string>
    <string name="button">Login</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_user_id">Enter User Id</string>
    <string name="search">Search</string>
    <string name="existing_dera">Existing Dera</string>
    <string name="new_entry">New entry</string>
    <string name="textview">TextView</string>
    <string name="passeordTextView">TextView</string>
    <string name="hello_world">Hello World</string>
    <string name="imageChangeingButton">Button</string>
    <string name="todo">TODO</string>
    <string name="upload_image">Upload Image</string>
    <string name="enter_id">Enter Id</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_father_s_name">Enter Father\'s Name</string>
    <string name="enter_address">Enter Address</string>
    <string name="uploadImage">Button</string>
    <string name="Identification">Name</string>
    <string name="enter_Id">Enter Id</string>
    <string name="enter_religion">Enter religion</string>
    <string name="maretial_status">Maretial Status</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="uploadimage">uploadImage</string>
    <string name="next">Next</string>
    <string name="place_visited_last_year">place Visited Last Year</string>
    <string name="route_used">Route Used</string>
    <string name="in_days_specify_duration">In days / specify duration</string>
    <string name="enter_designation">Enter Designation</string>
    <string name="textview_">TextView</string>
    <string name="save_details">Save Details</string>
    <string name="enter_addhar_number">Enter Addhar Number</string>
    <string name="enter_age">Enter Age</string>
    <string name="enter_gender">Enter gender</string>
    <string name="enter_mobie_number">Enter Mobie Number</string>
    <string name="f_enter_name">Enter Name</string>
    <string name="enter_relation">Enter Relation</string>
    <string name="family_details">Family Details</string>
    <string name="personal_details">Personal Details</string>
    <string name="name">Name :</string>
    <string name="fatehrs_name">Fatehrs Name :</string>
    <string name="address">Address :</string>
    <string name="religion">Religion :</string>
    <string name="maretial_status_output">Maretial Status</string>
    <string name="mobile_number">Mobile Number :</string>
    <string name="designation">Designation :</string>
    <string name="duration">Duration :</string>
    <string name="route_used_output">Route Used :</string>
    <string name="place_visited_last_year_output">Place visited last year :</string>
    <string name="family_details_output">Family Details</string>
    <string name="family_name_output">Name :</string>
    <string name="age_output">Age :</string>
    <string name="gender">Gender :</string>
    <string name="relation">Relation :</string>
    <string name="addhar_number">Addhar Number :</string>
    <string name="mobile_number_output">Mobile Number :</string>
    <string name="take_picture">take picture</string>
    <string name="search_by_name">search by Name</string>
    <string name="search_by_fathers_name">Search By Fathers Name</string>
    <string name="search_by_mobile_number">search By Mobile Number</string>
    <string name="fetch_person">Fetch Person</string>
    <string name="enter_search_query">Enter Search Query</string>
</resources>